<IM>
Add update user

tested ok
