# models/user_basic.go
@@ -46,3 +46,7 @@ func CreateUser(user UserBasic) *gorm.DB {
 func DeleteUser(user UserBasic) *gorm.DB {
 	return utils.DB.Where("id=?", user.ID).Delete(&user)
 }
+
+func UpdateUser(user UserBasic) *gorm.DB {
+	return utils.DB.Where("id=?", user.ID).Model(&user).Updates(UserBasic{Name: user.Name, Password: user.Password})
+}
