# service/index.go
@@ -1,13 +1,0 @@
-package service
-
-import "github.com/gin-gonic/gin"
-
-// GetIndex
-// @Tags HomePage
-// @Success 200 {string} Welcome
-// @Router /index [get]
-func GetIndex(c *gin.Context) {
-	c.JSON(200, gin.H{
-		"message": "Welcome!",
-	})
-}
